<resources>
    <string name="app_name">Dark Mode</string>
    <string name="night_mode">Dark Mode</string>
    <string name="night_mode_tile">Dark mode</string>
    <string name="auto">Auto Mode</string>
    <string name="day_mode">Light Mode</string>

    //Test Ads
    <!--        <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>-->
    <!--        <string name="native_id">ca-app-pub-3940256099942544/2247696110</string>-->
    <!--        <string name="interstitial">ca-app-pub-3940256099942544/1033173712</string>-->
    <!--        <string name="interstitial2">ca-app-pub-3940256099942544/1033173712</string>-->
    //genuine Ads
    <string name="app_id">ca-app-pub-4380652956129533~1686530039</string>
    <string name="native_id">ca-app-pub-4380652956129533/6442681623</string>
    <string name="interstitial">ca-app-pub-4380652956129533/9041441724</string>
    <string name="interstitial2">ca-app-pub-4380652956129533/9582994050</string>
    <string name="info_o_e_m_s">Note: some device manufacturers disabled the ability to enable dark
        mode in their versions of Android, or provide their own toggle</string>
    <string name="info_d_e_v_s">Note: only apps that have been updated by their developers to add a
        dark theme and follow the system setting will become dark</string>
    <string name="warn_car_mode">Warning: on this version of Android, car mode must be enabled in
        order to activate dark mode. This may cause unintended behavioral changes and a persistent
        notification icon to appear</string>
    <string name="warn_disable">Warning: ensure dark mode is disabled before uninstalling this app
        or upgrading to a new version of Android</string>
    <string name="rate">You are enjoying our app did this app work well for you then share you
        experience with us.</string>
    <string name="uninstall">Uninstall</string>
    <string name="msg_android_version_compatible">Your version of Android already
        includes built-in support for dark mode and prevents apps from changing the setting</string>
    <string name="msg_android_version_compatible_short">Your Device does not support this feature. Your version of Android already
        includes built-in support for dark mode. Tap for more information</string>
    <string name="alert_title">Incompatible Android Version</string>
    <string name="close">Close</string>
</resources>
