<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/container"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".BaseActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="exitUntilCollapsed|scroll|snap"
                app:titleEnabled="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="?android:actionBarSize"
                    android:layout_marginTop="50dp"
                    android:elevation="5dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:padding="5dp"
                        android:src="@drawable/dark_mode"
                        tools:ignore="ContentDescription" />

                </LinearLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_regular"
                android:text="Switch to Dark Mode"
                android:textSize="17sp"
                tools:ignore="HardcodedText" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:elevation="5dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioDay"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginEnd="-2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/radio_flat_selector_day"
                    android:button="@android:color/transparent"
                    android:elevation="15dp"
                    android:gravity="center"
                    android:paddingStart="22dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="22dp"
                    android:paddingBottom="12dp"
                    android:text="@string/day_mode"
                    android:textColor="@color/radio_flat_selector" />

                <RadioButton
                    android:id="@+id/radioNight"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/radio_flat_selector_night"
                    android:button="@android:color/transparent"
                    android:elevation="15dp"
                    android:gravity="center"
                    android:paddingStart="22dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="22dp"
                    android:paddingBottom="12dp"
                    android:text="@string/night_mode"
                    android:textColor="@color/radio_flat_selector" />

                <RadioButton
                    android:id="@+id/radioAuto"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginStart="-2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/radio_flat_selector_auto"
                    android:button="@android:color/transparent"
                    android:elevation="15dp"
                    android:gravity="center"
                    android:paddingStart="22dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="22dp"
                    android:paddingBottom="12dp"
                    android:text="@string/auto"
                    android:textColor="@color/radio_flat_selector" />

            </RadioGroup>

            <TextView
                android:id="@+id/info_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sideMargin"
                android:layout_marginTop="@dimen/textTopMargin"
                android:layout_marginEnd="@dimen/sideMargin"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/msg_android_version_compatible_short"
                android:textColor="#BE2421" />

            <TextView
                android:id="@+id/info_oems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sideMargin"
                android:layout_marginTop="@dimen/textTopMargin"
                android:layout_marginEnd="@dimen/sideMargin"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/info_o_e_m_s" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sideMargin"
                android:layout_marginTop="@dimen/textTopMargin"
                android:layout_marginEnd="@dimen/sideMargin"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/info_d_e_v_s"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/info_oems" />

            <TextView
                android:id="@+id/warn_carmode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sideMargin"
                android:layout_marginTop="@dimen/textTopMargin"
                android:layout_marginEnd="@dimen/sideMargin"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/warn_car_mode"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/warn_disable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sideMargin"
                android:layout_marginTop="@dimen/textTopMargin"
                android:layout_marginEnd="@dimen/sideMargin"
                android:layout_marginBottom="@dimen/sideMargin"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/warn_disable"
                android:textColor="@color/colorAccent" />

            <FrameLayout
                android:id="@+id/fl_adplaceholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@android:color/transparent" />

            <LinearLayout
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/share_button_background"
                android:gravity="center"
                android:elevation="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:padding="10dp"
                    android:src="@mipmap/team"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Share with your friends"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="17sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</RelativeLayout>